# ein-agent

./: CHANGELOG.md  README.md  release-please-config.json
.github/: .jira_sync_config.yaml
.github/workflows/: ci-cli.yaml  ci-rock.yaml  fast-lint.yaml  pr-title.yaml  release-please.yaml  release-rock.yaml  release-snap.yaml  version-check.yaml
docs/: how-to-configure-ein-agent-worker.md  how-to-deploy-ein-agent.md  how-to-release.md
docs/explanation/: harness-engineering.md  high-level-workflow.md  human-in-the-loop-workflow.md
docs/failure-cases/: kubepodnotready-rca-spec.md  pod-stuick-terminating.md
ein-agent-cli/: README.md  justfile  pyproject.toml
ein-agent-cli/ein_agent_cli/: __main__.py  command.py  console.py  hitl_orchestrator.py  models.py  orchestrator.py
ein-agent-cli/snap/: snapcraft.yaml
ein-agent-cli/tests/: test_command.py
rocks/ein-agent-worker/: LOCAL_DEVELOPMENT.md  Makefile  README.md  example-environment.yaml  justfile  pyproject.toml  rockcraft.yaml  run-worker-local.sh  run_workflow.py
rocks/ein-agent-worker/ein_agent_worker/: httpx_config.py  worker.py
rocks/ein-agent-worker/ein_agent_worker/activities/: __init__.py  alertmanager.py  worker_config.py
rocks/ein-agent-worker/ein_agent_worker/http/: __init__.py  aiohttp_config.py  proxy.py
rocks/ein-agent-worker/ein_agent_worker/models/: __init__.py  domain.py  gemini_litellm_provider.py  hitl.py  investigation.py
rocks/ein-agent-worker/ein_agent_worker/skills/: __init__.py  config.py  registry.py  temporal_skills.py
rocks/ein-agent-worker/ein_agent_worker/utcp/: __init__.py  aiohttp_config.py  approval.py  auth.py  config.py  loader.py  local_file_protocol.py  registry.py  serializers.py  ssl_config.py  temporal_utcp.py
rocks/ein-agent-worker/ein_agent_worker/utcp/openapi_handlers/: __init__.py  base.py  default.py  grafana.py  kubernetes.py
rocks/ein-agent-worker/ein_agent_worker/utcp/spec/: __init__.py  resolver.py  strategy.py
rocks/ein-agent-worker/ein_agent_worker/workflows/: __init__.py  human_in_the_loop.py  incident_correlation_workflow.py
rocks/ein-agent-worker/ein_agent_worker/workflows/agents/: __init__.py  factory.py  instructions.py  prompt_loader.py  shared_context_tools.py  specialists.py  tools.py
rocks/ein-agent-worker/prompts/agents/: compute_specialist.md  context_agent.md  investigation_agent.md  network_specialist.md  observability_specialist.md  orchestrator_agent.md  planning_agent.md  storage_specialist.md
rocks/ein-agent-worker/skills/utcp-best-practices/: content.md  skill.yaml
rocks/ein-agent-worker/tests/: test_aiohttp_config.py  test_alertmanager.py  test_httpx_config.py  test_proxy.py  test_shared_context.py  test_utcp_auth.py  test_utcp_config.py  test_utcp_registry.py  test_utcp_serializers.py  test_utcp_specialists.py
